<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_username_label"
        android:textAlignment="center"
        android:padding="8dp"
        android:text="@string/login_username_label"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="130dp"
        app:layout_constraintVertical_bias="0.3"
        android:textSize="40sp"

        android:fontFamily="@font/meditative"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/login_username_input"
        android:hint="@string/login_username_hint"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:textColorHint="@color/light_gray"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/login_username_label"
        app:layout_constraintRight_toRightOf="@id/login_username_label"
        app:layout_constraintTop_toBottomOf="@id/login_username_label"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_password_label"
        android:textAlignment="center"
        android:padding="8dp"
        android:text="@string/login_password_label"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/login_username_input"
        app:layout_constraintRight_toRightOf="@id/login_username_input"
        app:layout_constraintTop_toBottomOf="@id/login_username_input"
        app:layout_constraintVertical_bias="0.0"
        android:textSize="40sp"

        android:fontFamily="@font/meditative"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/login_password_input"
        android:hint="@string/login_password_hint"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:inputType="textPassword"
        android:textColorHint="@color/light_gray"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/login_password_label"
        app:layout_constraintRight_toRightOf="@id/login_password_label"
        app:layout_constraintTop_toBottomOf="@id/login_password_label"
        android:layout_marginTop="16dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/login"
        android:text="@string/login"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/login_password_input"
        app:layout_constraintRight_toRightOf="@id/login_password_input"
        app:layout_constraintTop_toBottomOf="@id/login_password_input"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:padding="10dp"
        />

    <ProgressBar
        android:id="@+id/loadingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/> <!-- Initially hidden -->


</androidx.constraintlayout.widget.ConstraintLayout>
