<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
   >

    <ImageView
        android:id="@+id/app_logo_register"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/circular_logp"
        android:contentDescription="App Logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/register_email_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/register_email_label"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/hogbine"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo_register" />

    <EditText
        android:id="@+id/register_email_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"

        android:drawablePadding="8dp"
        android:hint="Insert Your Email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email_label" />

    <TextView
        android:id="@+id/register_username_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_username_label"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/hogbine"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email_input" />

    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"

        android:drawablePadding="8dp"
        android:hint="@string/login_username_hint"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_username_label" />

    <TextView
        android:id="@+id/register_password_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_password_label"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/hogbine"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_username_input" />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"

        android:drawablePadding="8dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/circle_background"
        android:fontFamily="@font/hogbine"
        android:padding="12dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password_input" />

    <TextView
        android:id="@+id/register_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_btn" />

    <ProgressBar
        android:id="@+id/register_loadingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_result" />
</androidx.constraintlayout.widget.ConstraintLayout>
